# Wisp

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
assets/: help.txt  helpExample.txt
assets/help-text/: help.txt  helpExample.txt  helpMask.txt
assets/helpText/: helpHash.txt
assets/personal-data/: config.ini  entries.json  pairs.json
doc/: UML.mdj  getAlgorithm.md
include/: Main.h  main.h
include/commands/: commands.hpp  gen.h  general.hpp  get.h  glob.h  set.h  utils.hpp
include/commands/get/: get.h
include/control/: control.hpp  entry.hpp  enums.hpp  request.hpp
include/general/: General.h
include/get/: Get.h
include/glob/: Glob.h
include/input/: word.hpp
include/list/: List.h
include/set/: Set.h
include/structures/: date.h  entry.h  hash.h  hashMask.h
include/ui/: cli.hpp  launcher.hpp  ui.hpp
include/utils/: files.h  flags.h  utils.h
src/: Main.cpp  main.cpp
src/commands/: common.cpp  gen.cpp  general.cpp  get.cpp  glob.cpp  global.cpp  set.cpp  utils.cpp
src/commands/get/: get.cpp
src/commands/glob/: glob.cpp
src/commands/set/: set.cpp
src/control/: control.cpp  entry.cpp  request.cpp
src/general/: General.cpp
src/get/: Get.cpp
src/glob/: Glob.cpp
src/input/: word.cpp
src/list/: List.cpp
src/set/: Set.cpp
src/structures/: date.cpp  entry.cpp  hash.cpp  hashMask.cpp
src/ui/: ui.cpp
src/utils/: files.cpp  flags.cpp  utils.cpp
